--- a/draft/index.html
+++ b/draft/index.html
@@ -42,7 +42,7 @@ color: white;
 <p><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></p>
 <p>I consider black, white and red good</p>
 <p>resources</p>
-<p><a href = "https://github.com/ewingson/serverproject.com">code</a></p>
+<p>code</p>
 </div>
 </body>
 </html>
