--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-    <div id="doc" class="markdown-body container-fluid comment-enabled" data-hard-breaks="true" lang="en-US"><h1 id="tools" data-id="tools"><a class="anchor hidden-xs" href="#tools" title="tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tools</span></h1><h6 id="tags-tools" data-id="tags-tools"><a class="anchor hidden-xs" href="#tags-tools" title="tags-tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tags: </span><code>tools</code></h6><p><span>mächtige zahnschmerzen plagen mich.</span><br>
+    <div id="doc" class="markdown-body container-fluid comment-enabled comment-inner" data-hard-breaks="true" lang="en-US"><h1 id="tools" data-id="tools"><a class="anchor hidden-xs" href="#tools" title="tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tools</span></h1><h6 id="tags-tools" data-id="tags-tools"><a class="anchor hidden-xs" href="#tags-tools" title="tags-tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tags: </span><code>tools</code></h6><p><span>mächtige zahnschmerzen plagen mich.</span><br>
 <span>hier und heute liste ich meine tools:</span></p><ul>
 <li><span>hackmd</span></li>
 <li><span>obsidian is quatsch</span></li>
@@ -77,6 +77,7 @@
 <li><span>paar accounts (github and so on)</span></li>
 <li><span>diese seite hier (</span><a href="http://serverproject.com" target="_blank" rel="noopener"><span>serverproject.com</span></a><span>) ergibt das neue headquarter</span></li>
 <li><a href="http://erlenweg.com" target="_blank" rel="noopener"><span>erlenweg.com</span></a></li>
+<li><span>draft dir = </span><a href="./draft/" target="_blank" rel="noopener"><code>./draft</code></a></li>
 </ul></div>
     <div class="ui-toc dropup unselectable hidden-print" style="display:none;">
         <div class="pull-right dropdown">
