--- a/draft/index.html
+++ b/draft/index.html
@@ -34,7 +34,7 @@ color: white;
 <li><a href = "https://github.com/ewingson/solid-info">solid-info</a></li>
 </ul>
 <div>
-<table width = 50% border = 1>
+<table width = 50% border = 1 align = "center">
 <tr><td></td><td><td></tr>
 <tr><td></td><td><td></tr>
 </table>
@@ -42,7 +42,7 @@ color: white;
 <p><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></p>
 <p>I consider black, white and red good</p>
 <p>resources</p>
-<p>code</p>
+<p><a href = "https://github.com/ewingson/serverproject.com">code</a></p>
 </div>
 </body>
 </html>
