--- a/draft/index.html
+++ b/draft/index.html
@@ -35,14 +35,16 @@ color: white;
 </ul>
 <div>
 <table width = 50% border = 1 align = "center">
-<tr><td></td><td><td></tr>
-<tr><td></td><td><td></tr>
+<tr><td></td><td></td></tr>
+<tr><td></td><td></td></tr>
 </table>
-<p>think we're going with plain html</p>
-<p><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></p>
-<p>I consider black, white and red good</p>
-<p>resources</p>
-<p><a href = "https://github.com/ewingson/serverproject.com">code</a></p>
+<ul>
+<li>think we're going with plain html</li>
+<li><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></li>
+<li>I consider black, white and red good</li>
+<li>resources</li>
+<li><a href = "https://github.com/ewingson/serverproject.com">code</a></li>
+</ul>
 </div>
 </body>
 </html>
