--- a/draft/index.html
+++ b/draft/index.html
@@ -35,8 +35,8 @@ color: white;
 </ul>
 <div>
 <table width = 50% border = 1 align = "center">
-<tr><td></td><td></td></tr>
-<tr><td></td><td></td></tr>
+<tr><td>top left</td><td>top right</td></tr>
+<tr><td>bottom left</td><td>bottom right</td></tr>
 </table>
 <ul>
 <li>think we're going with plain html</li>
