--- a/draft/index.html
+++ b/draft/index.html
@@ -1,4 +1,4 @@
-<!-- Location: /index.html -->
+<!-- Location: /draft/index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -43,6 +43,7 @@ color: white;
 <li><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></li>
 <li>I consider black, white and red good</li>
 <li>resources</li>
+<li><a href = "../example/">example for html</a></li>
 <li><a href = "https://github.com/ewingson/serverproject.com">code</a></li>
 </ul>
 </div>
