--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <li><span>bash</span></li>
 <li><span>ssh</span></li>
 <li><span>ftp</span></li>
-<li><span>browser chrome o. firefox</span></li>
+<li><span>browser chromium o. firefox</span></li>
 <li><span>das kis von he (incl. cpanel)</span></li>
 <li><span>ping ist ein gefluegeltes wort</span></li>
 <li><span>cinny</span></li>
