add button effect

--- a/draft/index.html
+++ b/draft/index.html
@@ -27,8 +27,23 @@ body {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 color: white;
 }
+.button {
+  background-color: #0d47a1;
+  color: #ffffff;
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 0.5em;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #1266e2;
+  border-color: #1266e2;
+}
 </style>
 <h2>welcome !</h2>
+<div align = "center"><a href = "../"><button class = "button" id = "one">home</button></a></div>
 <p>a logo, a navigation, a table with a pic or two, a solid intro, links to floating projects, webids/pods, socials</p>
 <ul>
 <li><a href = "https://github.com/ewingson/solid-info">solid-info</a></li>
