--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <li><span>paar accounts (github and so on)</span></li>
 <li><span>diese seite hier (</span><a href="http://serverproject.com" target="_blank" rel="noopener"><span>serverproject.com</span></a><span>) ergibt das neue headquarter</span></li>
 <li><a href="http://erlenweg.com" target="_blank" rel="noopener"><span>erlenweg.com</span></a></li>
-<li><span>draft dir = </span><a href="./draft/" target="_blank" rel="noopener"><code>./draft</code></a></li>
+<li><span>draft dir = </span><a href="./draft/" target="_self" rel="noopener"><code>./draft</code></a></li>
 </ul></div>
     <div class="ui-toc dropup unselectable hidden-print" style="display:none;">
         <div class="pull-right dropdown">
