--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- this -->
 <!DOCTYPE html>
 
 <html lang="en" theme="light">
@@ -59,6 +60,10 @@
 </head>
 
 <body>
+<div align = "center">
+<a href = "https://www.serverproject.com/"><button class = "button" id = "one">home</button></a>
+<a href = "https://www.serverproject.com/draft/"><button class = "button" id = "two">draft</button></a>
+</div>
     <div id="doc" class="markdown-body container-fluid comment-enabled comment-inner" data-hard-breaks="true" lang="en-US"><h1 id="tools" data-id="tools"><a class="anchor hidden-xs" href="#tools" title="tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tools</span></h1><h6 id="tags-tools" data-id="tags-tools"><a class="anchor hidden-xs" href="#tags-tools" title="tags-tools"><span class="octicon octicon-link ph ph-link-simple-horizontal"></span></a><span>tags: </span><code>tools</code></h6><p><br>
 <span>hier und heute liste ich meine tools:</span></p><ul>
 <li><span>hackmd</span></li>
