--- a/draft/index.html
+++ b/draft/index.html
@@ -43,7 +43,10 @@ color: white;
 }
 </style>
 <h2>welcome !</h2>
-<div align = "center"><a href = "../"><button class = "button" id = "one">home</button></a></div>
+<div align = "center">
+<a href = "https://www.serverproject.com/"><button class = "button" id = "one">home</button></a>
+<a href = "https://www.serverproject.com/draft/"><button class = "button" id = "two">draft</button></a>
+</div>
 <p>a logo, a navigation, a table with a pic or two, a solid intro, links to floating projects, webids/pods, socials</p>
 <ul>
 <li><a href = "https://github.com/ewingson/solid-info">solid-info</a></li>
