--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<!-- Location: /draft/index.html -->
+<!-- Location: /contact/index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -44,26 +44,15 @@ color: white;
 </style>
 <div align = "center">
 <a href = "https://www.serverproject.com/"><button class = "button" id = "one">home</button></a>
-<a href = "https://www.serverproject.com/draft/"><button class = "button" id = "two">draft</button></a>
+<a href = "https://www.serverproject.com/example/"><button class = "button" id = "two">example</button></a>
+<a href = "https://www.serverproject.com/solid/"><button class = "button" id = "three">solid</button></a>
+<a href = "https://www.serverproject.com/links/"><button class = "button" id = "four">links</button></a>
+<a href = "https://www.serverproject.com/sites/"><button class = "button" id = "five">sites</button></a>
+<a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
+<a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<h2>welcome !</h2>
-<p>a logo, a navigation, a table with a pic or two, a solid intro, links to floating projects, webids/pods, socials</p>
-<ul>
-<li><a href = "https://github.com/ewingson/solid-info">solid-info</a></li>
-</ul>
-<div>
-<table width = 50% border = 1 align = "center">
-<tr><td>top left</td><td>top right</td></tr>
-<tr><td>bottom left</td><td>bottom right</td></tr>
-</table>
-<ul>
-<li>think we're going with plain html</li>
-<li><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></li>
-<li>I consider black, white and red good</li>
-<li>resources</li>
-<li><a href = "../example/">example for html</a></li>
-<li><a href = "https://github.com/ewingson/serverproject.com">code</a></li>
-</ul>
-</div>
+<div>content</div>
+<br /><hr /">
+<div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
 </html>
