--- a/contact/index.html
+++ b/contact/index.html
@@ -14,18 +14,18 @@
 <link rel="icon" href="https://www.serverproject.de/favicon.ico" type="image/x-ico; charset=binary"/>
 <title>serverproject.com</title>
 </head>
-<body bgcolor = "black">
+<body>
 <style>
 a:hover {color: red;}
 a
 {
-color: white;
+color: blue;
 text-decoration-line: underline;
 text-decoration-color: red;
 }
 body {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color: white;
+color: black;
 }
 .button {
   background-color: #0d47a1;
