--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <link rel="icon" href="https://www.serverproject.de/favicon.ico" type="image/x-ico; charset=binary"/>
 <title>serverproject.com</title>
 </head>
-<body bgcolor = "black">
+<body>
 <style>
 a:hover {color: red;}
 a
 {
-color: white;
+color: blue;
 text-decoration-line: underline;
 text-decoration-color: red;
 }
 body {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color: white;
+color: black;
 }
 .button {
   background-color: #0d47a1;
@@ -65,7 +65,7 @@ color: white;
 <ul>
 <li>think we're going with plain html</li>
 <li><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></li>
-<li>I consider black, white and red good</li>
+<li>still experimenting with the colours</li>
 <li><a href = "https://solidproject.solidcommunity.net/catalog/index.html">resources</a></li>
 <li><a href = "./example/">example for html</a></li>
 </ul>
