--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<img src = "image.jpg" width = "200" height = "200" alt = "inch3">
+<img src = "image.jpg" width = "150" height = "150" alt = "logo by inch3">
 <h2>welcome !</h2>
 <p>a logo, a navigation, a table with a pic or two, a solid intro, links to floating projects, webids/pods, socials</p>
 <ul>
