--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,13 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<div>content</div>
+<div align = "center">
+<br /><br /><br />
+<b>admin-c</b><br />
+matthias evering<br />
+erlenweg 32<br />
+32049 herford
+</div>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
