--- a/links/index.html
+++ b/links/index.html
@@ -51,7 +51,48 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<div>content</div>
+<div>
+<br /><br /><br />
+<a href = "https://github.com/solid">https://github.com/solid</a><br />
+<a href = "https://solidproject.org">https://solidproject.org</a><br />
+<a href = "https://solidproject.org/TR">https://solidproject.org/TR</a><br />
+<a href = "https://solidproject.org/TR/protocol">https://solidproject.org/TR/protocol</a><br />
+<a href = "https://matrix.to/#/#solid_project:matrix.org">https://matrix.to/#/#solid_project:matrix.org</a><br />
+<a href = "https://forum.solidproject.org/">https://forum.solidproject.org/</a><br />
+<a href = "https://solidproject.org/apps">https://solidproject.org/apps</a><br />
+<a href = "https://ewingson.solidcommunity.net/public/ttl/pod-provider.ttl">https://ewingson.solidcommunity.net/public/ttl/pod-provider.ttl</a><br />
+<a href = "https://jeff-zucker.github.io/solid-ide/">https://jeff-zucker.github.io/solid-ide/</a><br />
+<a href = "https://shaperepo.com/">https://shaperepo.com/</a><br />
+<a href = "https://notepod.vincenttunru.com/">https://notepod.vincenttunru.com/</a><br />
+<a href = "https://penny.vincenttunru.com/">https://penny.vincenttunru.com/</a><br />
+<a href = "https://dokie.li/">https://dokie.li/</a><br />
+<a href = "http://ttl.summerofcode.be/">http://ttl.summerofcode.be/</a><br />
+<a href = "https://solidos.solidcommunity.net/Team/docs/solidos.html">https://solidos.solidcommunity.net/Team/docs/solidos.html</a><br />
+<a href = "https://timbl.com/timbl/Public/Test/Characters/">https://timbl.com/timbl/Public/Test/Characters/</a><br />
+<a href = "https://de.solidcommunity.net/group/#/">https://de.solidcommunity.net/group/#/</a><br />
+<a href = "https://www.womenofsolid.org/">https://www.womenofsolid.org/</a><br />
+<a href = "https://w3.org/groups/cg/solid/">https://w3.org/groups/cg/solid/</a><br />
+<a href = "https://www.w3.org/groups/wg/lws/">https://www.w3.org/groups/wg/lws/</a><br />
+<a href = "https://www.virginiabalseiro.com/blog/tutorial">https://www.virginiabalseiro.com/blog/tutorial</a><br />
+<a href = "https://solidproject.org/for_developers">https://solidproject.org/for_developers</a><br />
+<a href = "https://solidos.solidcommunity.net/public/Roadmap/Tasks/index.ttl#this">https://solidos.solidcommunity.net/public/Roadmap/Tasks/index.ttl#this</a><br />
+<a href = "https://ldo.js.org/1.0.0-alpha.X/api/ldo/">https://ldo.js.org/1.0.0-alpha.X/api/ldo/</a><br />
+<a href = "https://inrupt.com">https://inrupt.com</a><br />
+<a href = "https://solidcommunity.net/">https://solidcommunity.net/</a><br />
+<a href = "https://signup.pod.inrupt.com/">https://signup.pod.inrupt.com/</a><br />
+<a href = "https://solid.open.ac.uk/">https://solid.open.ac.uk/</a><br />
+<a href = "https://solid.openlinksw.com:8444/">https://solid.openlinksw.com:8444/</a><br />
+<a href = "https://solid.openlinksw.com:8445/">https://solid.openlinksw.com:8445/</a><br />
+<a href = "https://trinpod.us/">https://trinpod.us/</a><br />
+<a href = "https://trinpod.eu/">https://trinpod.eu/</a><br />
+<a href = "https://get.use.id/">https://get.use.id/</a><br />
+<a href = "https://solid.aifb.kit.edu">https://solid.aifb.kit.edu</a><br />
+<a href = "https://datapod.igrant.io/">https://datapod.igrant.io/</a><br />
+<a href = "https://solid.redpencil.io">https://solid.redpencil.io</a><br />
+<a href = "https://solidcommunity.au/">https://solidcommunity.au/</a><br />
+<a href = "https://solid.social/">https://solid.social/</a><br />
+<a href = "https://pod.liquid.surf/">https://pod.liquid.surf/</a>
+</div>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
