--- a/sites/index.html
+++ b/sites/index.html
@@ -51,7 +51,16 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<div>content</div>
+<div>
+<br /><br /><br />
+these are domains that have in common: created by me...<br /><br />
+<a href = "https://buchstabenstaub.de">buchstabenstaub.de (https://ewingson.substack.com)</a><br />
+<a href = "https://erlenweg.com">erlenweg.com</a><br />
+<a href = "https://serverproject.de">serverproject.de</a><br />
+<a href = "https://serverproject.com">serverproject.com</a><br />
+<a href = "https://meisdata.io">meisdata.io</a><br />
+<a href = "https://configedit.com">configedit.com</a>
+</div>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
