--- a/socials/index.html
+++ b/socials/index.html
@@ -51,7 +51,20 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<div>content</div>
+<div>
+<br /><br /><br />
+github <a href = "https://github.com/ewingson">https://github.com/ewingson</a><br />
+facebook <a href = "https://facebook.com/elgskit">https://facebook.com/elgskit</a><br />
+linkedin <a href = "https://linkedin.com/in/ewingson">https://linkedin.com/in/ewingson</a><br />
+fediverse <a href = "https://w3.social/@ewingson">https://w3.social/@ewingson</a><br />
+matrix <a href = "https://matrix.to/#/#solid_meisdata_team:matrix.org">https://matrix.to/#/#solid_meisdata_team:matrix.org</a><br />
+x <a href = "https://x.com/ewingson_dev">https://x.com/ewingson_dev</a><br />
+flickr <a href = "https://www.flickr.com/photos/96841676@N05">https://www.flickr.com/photos/96841676@N05</a><br />
+gravatar <a href = "https://gravatar.com/configedit">https://gravatar.com/configedit</a><br />
+gulp <a href = "https://www.gulp.de/gulp2/g/spezialisten/resume/ewing">https://www.gulp.de/gulp2/g/spezialisten/resume/ewing</a><br />
+wordpress <a href = "https://configedit.com">https://configedit.com</a><br />
+open collective <a href = "https://opencollective.com/meisdata">https://opencollective.com/meisdata</a>
+</div>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
