--- a/solid/index.html
+++ b/solid/index.html
@@ -51,7 +51,12 @@ color: black;
 <a href = "https://www.serverproject.com/socials/"><button class = "button" id = "six">socials</button></a>
 <a href = "https://www.serverproject.com/contact/"><button class = "button" id = "seven">contact</button></a>
 </div>
-<div>content</div>
+<div>
+<br /><br /><br />
+write an intro<br /><br />
+pinpoint the USP<br /><br />
+list server urls
+</div>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
