--- a/solid/index.html
+++ b/solid/index.html
@@ -53,10 +53,21 @@ color: black;
 </div>
 <div>
 <br /><br /><br />
-write an intro<br /><br />
-pinpoint the USP<br /><br />
-list server urls
-</div>
+<b>Introduction</b><br /><br />
+Today’s web is built on data silos where a few large platforms own your personal information. The Solid project, initiated by web inventor Tim Berners-Lee, flips this model by decoupling data from the applications themselves. meisdata.io is a dedicated Solid Pod provider based in Herford, Germany, bridging the gap between this revolutionary technology and practical, professional implementation.
+<br /><br />
+<b>Our Benefits and USP</b><br /><br />
+Our unique selling point lies in restoring digital autonomy through decentralized storage.<br />
+For Laypeople: meisdata.io provides a "digital vault" (a Solid Pod) and a universal WebID. Instead of giving your data away to every website you visit, you grant apps temporary access to your Pod. You remain the sole owner of your photos, contacts, and identity.<br />
+For Developers: We provide a robust, interoperable infrastructure that follows Semantic Web standards. This eliminates the need to build and secure massive user databases from scratch, allowing you to focus on application logic while ensuring your tools are compatible with the global Solid ecosystem.
+What sets meisdata.io apart is our commitment to German security standards, enterprise-grade reliability, and expert consulting. We don't just host data; we provide the support necessary to integrate these decentralized solutions into real-world business processes.
+<br /><br />
+<b>Conclusion</b><br /><br />
+The combination of the Solid protocol and meisdata.io’s professional hosting creates an internet where data is portable, private, and secure. We are building the foundation for a more intelligent, user-centric web—one where individuals regain their independence and developers can innovate without boundaries.
+<br /><br /><br />
+<a href = "https://solidweb.org">solidweb.org</a><br />
+<a href = "https://solidweb.me">solidweb.me</a><br />
+<a href = "https://teamid.live">teamid.live</a><br />
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
