--- a/index.html
+++ b/index.html
@@ -53,21 +53,26 @@ color: black;
 </div>
 <img src = "image.jpg" width = "150" height = "150" alt = "logo by inch3">
 <h2>welcome !</h2>
+<p>here we have everything a webpage needs:</p>
 <p>a logo, a navigation, a table with a pic or two, a solid intro, links to floating projects, webids/pods, socials</p>
 <ul>
 <li><a href = "https://github.com/ewingson/solid-info">solid-info</a></li>
 </ul>
 <div>
 <table width = 50% border = 1 align = "center">
-<tr><td>top left</td><td>top right</td></tr>
-<tr><td>bottom left</td><td>bottom right</td></tr>
+<tr><td align = "center"><img src = "j.jpg" width = "130" height = "130" alt = "guiding star"></td><td align = "center"><img src = "rainbow-colours.png" width = "130" height = "130" alt = "diversity"></td></tr>
+<tr><td align = "center">description to come</td><td align = "center">description to come</td></tr>
 </table>
 <ul>
-<li>think we're going with plain html</li>
-<li><a href = "https://testpro.solidweb.org/profile/card#me">https://testpro.solidweb.org/profile/card#me</a></li>
-<li>still experimenting with the colours</li>
+<li><a href = "/">home/this</a></li>
+<li><a href = "/example">an example to learn html</a></li>
+<li><a href = "/solid">an introduction to the solidverse</a></li>
+<li><a href = "/links">some useful a hrefs</a></li>
+<li><a href = "/sites">some sites I built</a></li>
+<li><a href = "/socials">some accounts</a></li>
+<li><a href = "/contact">where you find me</a></li>
 <li><a href = "https://solidproject.solidcommunity.net/catalog/index.html">resources</a></li>
-<li><a href = "./example/">example for html</a></li>
+<li><a href = "https://testpro.solidweb.org/profile/card#me">a WebId</a></li>
 </ul>
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
