change url for solid-ide

--- a/links/index.html
+++ b/links/index.html
@@ -61,7 +61,7 @@ color: black;
 <a href = "https://forum.solidproject.org/">https://forum.solidproject.org/</a><br />
 <a href = "https://solidproject.org/apps">https://solidproject.org/apps</a><br />
 <a href = "https://ewingson.solidcommunity.net/public/ttl/pod-provider.ttl">https://ewingson.solidcommunity.net/public/ttl/pod-provider.ttl</a><br />
-<a href = "https://jeff-zucker.github.io/solid-ide/">https://jeff-zucker.github.io/solid-ide/</a><br />
+<a href = "https://jeff-zucker.github.io/solid-content-manager/">https://jeff-zucker.github.io/solid-content-manager/</a><br />
 <a href = "https://shaperepo.com/">https://shaperepo.com/</a><br />
 <a href = "https://notepod.vincenttunru.com/">https://notepod.vincenttunru.com/</a><br />
 <a href = "https://penny.vincenttunru.com/">https://penny.vincenttunru.com/</a><br />
