--- a/socials/index.html
+++ b/socials/index.html
@@ -56,7 +56,7 @@ color: black;
 github <a href = "https://github.com/ewingson">https://github.com/ewingson</a><br />
 facebook <a href = "https://facebook.com/elgskit">https://facebook.com/elgskit</a><br />
 linkedin <a href = "https://linkedin.com/in/ewingson">https://linkedin.com/in/ewingson</a><br />
-fediverse <a href = "https://w3.social/@ewingson">https://w3.social/@ewingson</a><br />
+fediverse <a href = "https://w3c.social/@ewingson">https://w3.social/@ewingson</a><br />
 matrix <a href = "https://matrix.to/#/#solid_meisdata_team:matrix.org">https://matrix.to/#/#solid_meisdata_team:matrix.org</a><br />
 x <a href = "https://x.com/ewingson_dev">https://x.com/ewingson_dev</a><br />
 flickr <a href = "https://www.flickr.com/photos/96841676@N05">https://www.flickr.com/photos/96841676@N05</a><br />
