--- a/links/index.html
+++ b/links/index.html
@@ -73,7 +73,7 @@ color: black;
 <a href = "https://www.womenofsolid.org/">https://www.womenofsolid.org/</a><br />
 <a href = "https://w3.org/groups/cg/solid/">https://w3.org/groups/cg/solid/</a><br />
 <a href = "https://www.w3.org/groups/wg/lws/">https://www.w3.org/groups/wg/lws/</a><br />
-<a href = "https://www.virginiabalseiro.com/blog/tutorial">https://www.virginiabalseiro.com/blog/tutorial</a><br />
+<a href = "https://virginiabalseiro.com/blog/tutorial">https://virginiabalseiro.com/blog/tutorial</a><br />
 <a href = "https://solidproject.org/for_developers">https://solidproject.org/for_developers</a><br />
 <a href = "https://solidos.solidcommunity.net/public/Roadmap/Tasks/index.ttl#this">https://solidos.solidcommunity.net/public/Roadmap/Tasks/index.ttl#this</a><br />
 <a href = "https://ldo.js.org/1.0.0-alpha.X/api/ldo/">https://ldo.js.org/1.0.0-alpha.X/api/ldo/</a><br />
