--- a/solid/index.html
+++ b/solid/index.html
@@ -68,6 +68,7 @@ The combination of the Solid protocol and meisdata.io’s professional hosting c
 <a href = "https://solidweb.org">solidweb.org</a><br />
 <a href = "https://solidweb.me">solidweb.me</a><br />
 <a href = "https://teamid.live">teamid.live</a><br />
+<a href = "https://meisdata.io">meisdata.io</a><br />
 <br /><hr /">
 <div align = "center"><a href = "https://github.com/ewingson/serverproject.com">code</a></div>
 </body>
